# BTR-TOOLS

./: .gitignore  CONTRIBUTORS.md  CodeOutlineReferenceDocument.md  DebuggingInfo.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci-cd.yml
btrtools/: __init__.py
btrtools/cli/: __init__.py  analyze.py  check.py  compare.py  export.py  scan.py  schema.py
btrtools/core/: btrieve.py
btrtools/tests/: test_basic.py  test_cli.py  test_performance.py
btrtools/utils/: __init__.py  logging.py
docs/: changelog.rst  code-outline-reference.rst  conf.py  contributing.rst  debugging.rst  index.rst  installation.rst  troubleshooting.rst  usage.rst
docs/api/: btrtools.cli.rst  btrtools.core.rst  btrtools.rst  btrtools.tests.rst  btrtools.utils.rst  core.rst  exceptions.rst  logging.rst  modules.rst
scripts/: btrtools
